# openfoam

./: .gitignore  Dockerfile  README.md  compose.jupyter.yml  jupyter_down.sh  jupyter_restart.sh  jupyter_up.sh  pyproject.toml  run.sh  run_openfoam.sh  run_python.sh  run_test.sh
experiments/cavity/: README.ipynb
experiments/cavity/0.5/: nut
experiments/cavity/1.5/: epsilon  k  phi
experiments/cavity/10/: epsilon
experiments/cavity/2/: k
experiments/cavity/2.5/: epsilon  k
experiments/cavity/3/: U  epsilon  phi
experiments/cavity/3.5/: epsilon
experiments/cavity/4/: epsilon  k  p  phi
experiments/cavity/4.5/: U  epsilon  k
experiments/cavity/5.5/: U  epsilon  k  p
experiments/cavity/6/: epsilon  k
experiments/cavity/6.5/: U  epsilon
experiments/cavity/7/: p
experiments/cavity/7.5/: k  nut  p
experiments/cavity/8/: U
experiments/cavity/8.5/: U  epsilon  phi
experiments/cavity/9/: phi
experiments/cavity/VTK/: cavity_1000.vtk  cavity_1100.vtk  cavity_1500.vtk  cavity_1600.vtk  cavity_1700.vtk  cavity_1800.vtk  cavity_1900.vtk  cavity_200.vtk  cavity_2000.vtk  cavity_300.vtk  cavity_400.vtk  cavity_700.vtk  cavity_800.vtk
experiments/cavityDye/: Makefile  README.ipynb  README.md
experiments/cavityDye/0.5/: k
experiments/cavityDye/1/: epsilon  k
experiments/cavityDye/1.5/: nut
experiments/cavityDye/10.125/: C
experiments/cavityDye/10.25/: C
experiments/cavityDye/10.375/: C
experiments/cavityDye/10.5/: C
experiments/cavityDye/10.625/: C
src/ofiz/: plot.py
tests/: test_plot.py
tools/: export_md.sh
(+570 files in other folders)
